--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <ul>
         <li>
           <strong
-            ><a href="/HTML/Oracle_database.html">
+            ><a href="./HTML/Oracle_database.html">
               Manual de Oracle Database</a
             ></strong
           >
         </li>
         <li>
-          <a href="/HTML/SQL_Developer.html"
+          <a href="./HTML/SQL_Developer.html"
             ><strong> Manual de SQL Developer</strong></a
           >
         </li>
@@ -34,7 +34,7 @@
       </ul>
     </div>
     <img
-      src="/Imagenes/foto_manual.jpg"
+      src="./Imagenes/foto_manual.jpg"
       alt="Descripción de la imagen"
       class="imagen"
     />
