--- a/HTML/Manual_1-10.html
+++ b/HTML/Manual_1-10.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manuales de usuario</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../CSS/styles.css" />
   </head>
   <body>
     <header>
@@ -13,7 +13,9 @@
     <div class="container">
       <ul>
         <li>
-          <strong><a href="/index.html"> Volver al Índice principal</a></strong>
+          <strong
+            ><a href="../index.html"> Volver al Índice principal</a></strong
+          >
         </li>
         <li>
           <a href="">Ejercicio 1</a>
