Ultimos retoques de la semana.

--- a/HTML/Oracle_database.html
+++ b/HTML/Oracle_database.html
@@ -29,7 +29,7 @@
             >Descargar Oracle Database 21c Express Edition</a
           >
         </p>
-        <div class="image-placeholder">[Espacio para imagen de descarga]</div>
+         <!--(poner imágen aquí)-->
       </section>
 
       <section>
@@ -44,8 +44,8 @@
           <li>Ingrese una contraseña segura.</li>
           <li>Haga clic en "Instalar" y espere a que finalice el proceso.</li>
         </ul>
-        <div class="image-placeholder">
-          [Espacio para imagen del asistente de instalación]
+         <!--(poner imágen aquí)-->
+           <!--(poner imágen aquí)-->
         </div>
       </section>
 
@@ -61,7 +61,7 @@
             <strong>Contraseña:</strong> la que definió durante la instalación
           </li>
         </ul>
-        <div class="image-placeholder">[Espacio para imagen de SQL Plus]</div>
+         <!--(poner imágen aquí)-->
       </section>
 
       <section>
@@ -78,7 +78,7 @@
             >Descargar SQL Developer</a
           >
         </p>
-        <div class="image-placeholder">[Espacio para imagen de descarga]</div>
+         <!--(poner imágen aquí)-->
       </section>
 
       <section>
@@ -88,9 +88,7 @@
           <strong>sqldeveloper.exe</strong>. Seleccione "No" cuando se le
           pregunte si desea importar configuraciones previas.
         </p>
-        <div class="image-placeholder">
-          [Espacio para imagen del instalador]
-        </div>
+         <!--(poner imágen aquí)-->
       </section>
 
       <section>
@@ -103,9 +101,7 @@
           </li>
         </ul>
         <p>Haga clic en "Conectar" para finalizar la configuración.</p>
-        <div class="image-placeholder">
-          [Espacio para imagen de SQL Developer]
-        </div>
+         <!--(poner imágen aquí)-->
       </section>
     </div>
   </body>
