--- a/HTML/SQL_Developer.html
+++ b/HTML/SQL_Developer.html
@@ -22,7 +22,7 @@
             >Descargar SQL Developer</a
           >
         </p>
-        <div class="image-placeholder">[Espacio para imagen de descarga]</div>
+        <!--(poner imágen aquí)-->
       </section>
 
       <section>
@@ -32,9 +32,7 @@
           <strong>sqldeveloper.exe</strong>. Seleccione "No" cuando se le
           pregunte si desea importar configuraciones previas.
         </p>
-        <div class="image-placeholder">
-          [Espacio para imagen del instalador]
-        </div>
+        <!--(poner imágen aquí)-->
       </section>
 
       <section>
