--- a/HTML/Oracle_database.html
+++ b/HTML/Oracle_database.html
@@ -1,108 +1,99 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manual de Oracle Database</title>
-    <link rel="stylesheet" href="../CSS/styles.css" />
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Manual de Oracle Database</title>
+  <link rel="stylesheet" href="../CSS/styles.css" />
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <h1>
+        Manual de Instalación de Oracle Database 21c Express Edition
+      </h1>
+    </header>
+
     <div class="container">
-      <header>
-        <h1>
-          Manual de Instalación de Oracle Database 21c Express Edition y SQL
-          Developer
-        </h1>
-      </header>
-
-      <section>
-        <h2>Oracle Database</h2>
-        <h3>Paso 1: Descargar Oracle Database</h3>
-        <p>
-          Descargue la versión
-          <strong>Oracle Database 21c Express Edition for Windows x64</strong>
-          desde el siguiente enlace:
-        </p>
-        <p>
-          <a
-            href="https://download.oracle.com/otn-pub/otn_software/db-express/OracleXE213_Win64.zip"
-            >Descargar Oracle Database 21c Express Edition</a
-          >
-        </p>
-         <!--(poner imágen aquí)-->
-      </section>
-
-      <section>
-        <h3>Paso 2: Instalar Oracle Database</h3>
-        <p>
-          Extraiga el contenido del archivo descargado y ejecute
-          <strong>setup.exe</strong>. Luego, siga estos pasos:
-        </p>
-        <ul>
-          <li>Acepte los términos y condiciones.</li>
-          <li>Seleccione la carpeta de instalación.</li>
-          <li>Ingrese una contraseña segura.</li>
-          <li>Haga clic en "Instalar" y espere a que finalice el proceso.</li>
-        </ul>
-         <!--(poner imágen aquí)-->
-           <!--(poner imágen aquí)-->
-        </div>
-      </section>
-
-      <section>
-        <h3>Paso 3: Verificar la Instalación</h3>
-        <p>
-          Abra la barra de búsqueda de Windows y escriba "SQL Plus". Inicie
-          sesión con:
-        </p>
-        <ul>
-          <li><strong>Usuario:</strong> system</li>
-          <li>
-            <strong>Contraseña:</strong> la que definió durante la instalación
-          </li>
-        </ul>
-         <!--(poner imágen aquí)-->
-      </section>
-
-      <section>
-        <h2>SQL Developer</h2>
-        <h3>Paso 1: Descargar SQL Developer</h3>
-        <p>
-          Descargue la versión
-          <strong>Windows 64-bit with JDK 17 included</strong> desde el
-          siguiente enlace:
-        </p>
-        <p>
-          <a
-            href="https://download.oracle.com/otn_software/java/sqldeveloper/sqldeveloper-24.3.1.347.1826-x64.zip"
-            >Descargar SQL Developer</a
-          >
-        </p>
-         <!--(poner imágen aquí)-->
-      </section>
-
-      <section>
-        <h3>Paso 2: Instalar SQL Developer</h3>
-        <p>
-          Extraiga el contenido del archivo descargado y ejecute
-          <strong>sqldeveloper.exe</strong>. Seleccione "No" cuando se le
-          pregunte si desea importar configuraciones previas.
-        </p>
-         <!--(poner imágen aquí)-->
-      </section>
-
-      <section>
-        <h3>Paso 3: Verificar la Instalación</h3>
-        <p>Abra SQL Developer, haga clic en "Nueva conexión" e ingrese:</p>
-        <ul>
-          <li><strong>Usuario:</strong> system</li>
-          <li>
-            <strong>Contraseña:</strong> la que definió durante la instalación
-          </li>
-        </ul>
-        <p>Haga clic en "Conectar" para finalizar la configuración.</p>
-         <!--(poner imágen aquí)-->
-      </section>
+      <ul>
+        <li>
+          <strong><a href="./Oracle_database.html">
+              Manual de Oracle Database</a></strong>
+        </li>
+        <li>
+          <a href="./SQL_Developer.html"><strong> Manual de SQL Developer</strong></a>
+        </li>
+        <li>
+          <a href="./Manual_1-10.html"><strong>
+              Manual de Usuario de los ejercicios del 1 al 10</strong></a>
+        </li>
+        <li>
+          <a href="../index.html"><strong>
+              Volver al Índice principal</strong></a>
+        </li>
+      </ul>
     </div>
-  </body>
+
+    <section>
+      <h2>Oracle Database</h2>
+      <h3>Paso 1: Descargar Oracle Database</h3>
+      <p>
+        Descargue la versión
+        <strong>Oracle Database 21c Express Edition for Windows x64</strong>
+        desde el siguiente enlace:
+      </p>
+      <p>
+        <a href="https://download.oracle.com/otn-pub/otn_software/db-express/OracleXE213_Win64.zip">Descargar Oracle
+          Database 21c Express Edition</a>
+      </p>
+      <!--(poner imágen aquí)-->
+      <img src="../Imagenes/img1.png" alt="imagen1">
+    </section>
+
+    <section>
+      <h3>Paso 2: Instalar Oracle Database</h3>
+      <p>
+        Extraiga el contenido del archivo descargado y ejecute
+        <strong>setup.exe</strong>. Luego, siga estos pasos:
+      </p>
+      <ul>
+        <li>Acepte los términos y condiciones.</li>
+        <li>Seleccione la carpeta de instalación.</li>
+        <li>Ingrese una contraseña segura.</li>
+        <li>Haga clic en "Instalar" y espere a que finalice el proceso.</li>
+      </ul>
+      <!--(poner imágen aquí)-->
+      <img src="../Imagenes/img2.png" alt="imagen2">
+      <!--(poner imágen aquí)-->
+      <img src="../Imagenes/img3.png" alt="imagen3">
+      <img src="../Imagenes/img4.png" alt="imagen4">
+      <img src="../Imagenes/img5.png" alt="imagen5">
+      <img src="../Imagenes/img6.png" alt="imagen6">
+      <img src="../Imagenes/img7.png" alt="imagen7">
+      <img src="../Imagenes/img8.png" alt="imagen8">
+      <img src="../Imagenes/img9.png" alt="imagen9">
+
+    </section>
+
+    <section>
+      <h3>Paso 3: Verificar la Instalación</h3>
+      <p>
+        Abra la barra de búsqueda de Windows y escriba "SQL Plus". Inicie
+        sesión con:
+      </p>
+      <ul>
+        <li><strong>Usuario:</strong> system</li>
+        <li>
+          <strong>Contraseña:</strong> la que definió durante la instalación
+        </li>
+      </ul>
+      <!--(poner imágen aquí)-->
+      <img src="../Imagenes/img11.png" alt="imagen11">
+      <img src="../Imagenes/img12.png" alt="imagen12">
+    </section>
+  </div>
+</body>
+
 </html>
